WRP-2611 - resolving issue relating to text wrapping on two lines in alternate schemes. Fixed for sca-compact: Fixed for sca-comfy:

--- a/app/styles/compact.scss
+++ b/app/styles/compact.scss
@@ -29,8 +29,9 @@
       padding-left: 35px!important;
   }
   /*Dashboard */
-   .sca-compact .table-full .btn-round {width: 16px !important;}
-  .sca-compact .feedback-message-date{font-size:10px!important; letter-spacing:-1px!important;}
+   .sca-compact .feedback-icon-link {
+    min-width: 120px;
+}
   .sca-compact .logo .img-responsive {
       height: 35px;
       width: 35px
