--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,3 +1,5 @@
+  .feedback-icon-link{min-width:150px;}
+ .feedback-message-date {letter-spacing:-.5px;}
 .blue.green{background-color: #42A5F5!important;}
 .dashboard-links {
   font-family: 'Roboto', sans-serif;
